# airflow-core-operators

./: .gitignore  README.md  SECURITY.md  justfile  pyproject.toml  spread.yaml  tox.ini
.github/: .jira_sync_config.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  enhancement_proposal.yaml
.github/workflows/: ci.yaml  promote.yaml  publish.yaml  release.yaml  spread_ci.yaml  terraform.yaml  tests.yaml
airflow-api-server/: CONTRIBUTING.md  charmcraft.yaml  pyproject.toml  tox.ini
airflow-api-server/src/: airflow_api_server.py  charm.py
airflow-api-server/tests/integration/: test_charm.py
airflow-api-server/tests/unit/: conftest.py  task.yaml  test_charm.py
charms/airflow-api-server/: CONTRIBUTING.md  README.md  charmcraft.yaml  pyproject.toml  tox.ini
charms/airflow-api-server/src/: charm.py  constants.py
charms/airflow-dag-processor/: charmcraft.yaml
charms/airflow-triggerer/: README.md  charmcraft.yaml  pyproject.toml  tox.ini
charms/airflow-triggerer/src/: airflow_triggerer.py  charm.py  constants.py
charms/api-server/: README.md  charmcraft.yaml  pyproject.toml  tox.ini
charms/api-server/src/: charm.py  constants.py
charms/api-server/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/dag-processor/: LICENSE  README.md  charmcraft.yaml  pyproject.toml
charms/dag-processor/src/: charm.py  constants.py
charms/dag-processor/terraform/: README.md  justfile  main.tf  outputs.tf  variables.tf
charms/scheduler/: .gitignore  README.md  charmcraft.yaml  pyproject.toml  tox.ini
charms/scheduler/src/: charm.py  constants.py
charms/scheduler/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/triggerer/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  charmcraft.yaml  pyproject.toml  tox.ini
charms/triggerer/src/: charm.py  constants.py
charms/triggerer/terraform/: README.md  justfile  main.tf  outputs.tf  variables.tf  versions.tf
tests/integration/: conftest.py  test.py  test_charms.py  test_core_charm_smoke.py  test_dag_execution.py  test_functional.py  test_infrastructure.py  test_ingress.py  test_integration_airflow_stack.py
tests/integration/helpers/: charm_prep.py  (+5 more)
(+29 files in other folders)
