[project]
name = "airflow-core-operators"
version = "0.0.0"
requires-python = ">=3.10"
description = "Integration tests tooling for airflow-core-operators"
readme = "README.md"
dependencies = []

[dependency-groups]
integration = [
  # Include tox so `just integration` can invoke it without missing binary errors.
  "tox",
  "pytest",
  "jubilant",
  "requests",
  "PyYAML",
  "tenacity",
]

unit = [
  "pytest",
  "coverage[toml]",
]

lint = [
  "ruff>=0.6",
  "codespell",
]

format = [
  "ruff>=0.6",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
testpaths = ["tests/integration"]
markers = [
    "abort_on_fail: abort test run on first failure",
]
