[project]
name = "airflow-core-operators"
version = "3.1"
requires-python = ">=3.10"
description = "Integration tests tooling for airflow-core-operators"
readme = "README.md"
dependencies = []

[dependency-groups]
integration = [
  # Include tox so `just integration` can invoke it without missing binary errors.
  "tox",
  "pytest",
  "jubilant",
  "requests",
  "PyYAML",
  "tenacity",
]

lint = [
  "tox",
  "ruff>=0.6",
  "codespell",
]

format = [
  "tox",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
testpaths = ["tests/integration"]
markers = [
]
