# Copyright 2026 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "airflow-core-operators"
version = "3.1"
requires-python = ">=3.10"
description = "Integration tests tooling for airflow-core-operators"
readme = "README.md"
dependencies = []

[dependency-groups]
integration = [
  "tox",
  "pytest",
  "jubilant",
  "requests",
  "PyYAML",
  "tenacity",
  "cryptography>=41.0",
]

lint = [
  "tox",
  "ruff>=0.6",
  "codespell",
]

format = [
  "tox",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
testpaths = ["tests/integration"]
